Fixed gaps and width

--- a/src/Middle/Middle.css
+++ b/src/Middle/Middle.css
@@ -1,15 +1,39 @@
-.middle-car-block {
+body {
+	margin: 0px;
 	display: flex;
+}
+.middle-car-block {
+	width: 100%;
+	display: flex;
+	flex-flow: column wrap;
 	background-color: #f3f3f5;
-	margin-top: 0;
-	margin-left: auto;
-	margin-right: auto;
-	padding-left: .9375rem;
-	padding-right: .9375rem;
 }
 
 .no-car-text {
 	color: #373a3c;
 	margin: 1rem 20rem;
 	margin-bottom: 1%;
+}
+.list-items {
+	flex-direction: row;
+}
+h2 {
+	/*font-size: 45px;*/
+	margin-bottom: 0;
+}
+h3 {
+	margin-top: 0;
+	/*font-size: 20px;*/
+}
+.list-items {
+	font-size: 30px;
+}
+
+img {
+	width: 20px;
+	height: 20px;
+}
+
+footer {
+	text-align: center;
 }
