--- a/src/Top/Top.css
+++ b/src/Top/Top.css
@@ -1,3 +1,6 @@
+body {
+	margin: 0px;
+}
 .logo {
 	fill: white;
 	height: 4em;
@@ -5,10 +8,13 @@
 	margin: 2% 5%;
 }
 .header-container {
+	display: flex;
 	background-color: #785ef0;
 	margin-bottom: 0;
 	color: #ffffff;
 	font-size: 18px;
+	width: 100%;
+	flex-flow: column;
 }
 form {
 	margin: 1rem 20rem;
